--- a/assets/css/spotify.css
+++ b/assets/css/spotify.css
@@ -63,6 +63,7 @@ footer {
 
 footer span h3, footer span h4 {
     margin: 0;
+    white-space: nowrap;
 }
 
 footer img {
@@ -79,12 +80,13 @@ footer img {
 
 #info {
     display: flex;
+    width: 60%;
+    overflow: hidden;
 }
 
 #info span {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
