--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -120,7 +120,7 @@ main div#links .opt img {
     width: 140px;
 }
 
-span.addIc {
+span.exitAdd {
     position: absolute;
     right: 0;
     top: 0;
